--- a/demo/package.json
+++ b/demo/package.json
@@ -4,6 +4,9 @@
   "private": true,
   "devDependencies": {
     "babel-preset-react-native-stage-0": "^1.0.1",
+    "detox": "^7.3.7",
+    "detox-cli": "^7.2.0",
+    "jest": "^22.4.4",
     "jest-react-native": "^18.0.0",
     "react-test-renderer": "16.2.0"
   },
@@ -11,7 +14,9 @@
     "start": "react-native start",
     "android": "react-native run-android",
     "ios": "react-native run-ios",
-    "test": "node node_modules/jest/bin/jest.js"
+    "test": "node node_modules/jest/bin/jest.js",
+    "test:e2e": "detox test -c ios.sim.debug",
+    "test:e2e:build": "detox build"
   },
   "jest": {
     "preset": "react-native"
@@ -20,5 +25,17 @@
     "react": "16.3.1",
     "react-native": "0.55.4",
     "react-native-view-pdf": "0.3.1"
+  },
+  "detox": {
+    "test-runner": "jest",
+    "runner-config": "e2e/config.json",
+    "configurations": {
+      "ios.sim.debug": {
+        "binaryPath": "ios/build/Build/Products/Debug-iphonesimulator/demo.app",
+        "build": "xcodebuild -project ios/demo.xcodeproj -scheme demo -configuration Debug -sdk iphonesimulator -derivedDataPath ios/build",
+        "type": "ios.simulator",
+        "name": "iPhone 7"
+      }
+    }
   }
 }
